k8s/traduxai-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traduxai-dev
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: dev
    app: traduxai
