k8s/traduxai-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traduxai-ingress
  namespace: traduxai-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: traduxai.heck.app
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traduxai-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traduxai-web
                port:
                  number: 80
